...
        android:textSize="14sp"
        android:textStyle=""
        android:textColor="@color/white"
        android:text="Change password" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/mybutton"
        android:text="Log out" />

</RelativeLayout>

